// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribution in browser renders CodeRunnerNote when slug includes python 1`] = `
<details
  className="attribution-details"
  data-analytics-region="attribution"
  data-testid="attribution-details"
  style={
    Object {
      "--attribution-text-color": "#424242",
      "--content-text-width": "82.5rem",
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
>
  <summary
    aria-label="Citation/Attribution"
    className="attribution-summary"
    style={
      Object {
        "--attribution-text-color": "#424242",
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="details-expand-icon attribution-summary-icon attribution-expand-icon"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.403 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="details-collapse-icon attribution-summary-icon attribution-collapse-icon"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span
      aria-level={2}
      role="heading"
    >
      Citation/Attribution
    </span>
  </summary>
  <div
    className="attribution-content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<strong role=\\"heading\\" aria-level=\\"3\\">Reuse and redistribution of this content in digital or print format:</strong>
<ul>
  <li>
    This book may not be used in the training of large language models or otherwise be ingested into large language models or generative AI offerings without OpenStax's prior written permission.
  </li>
  <li>
    This book uses the
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"http://example.com\\">
      Sweet License 1.0
    </a>, which means that you can reuse and modify the material only for noncommercial purposes, must attribute The Michelson 20MM Foundation, and must distribute any derivative works under the same license. Changes were made to the original material, including updates to art, structure, and other content updates.
  </li>
  <li>
    Any commercial printing of this textbook, including using a local or custom printer, must be approved by OpenStax, and proper citation provided.
  </li>
  <li>
    OpenStax-copyrighted images, activities, assessments, and similar components of this book are subject to the same licensing – CC-BY-NC-SA. They can be used for noncommercial purposes with attribution. Commercial use requires permission.
  </li>
  <li>
    <strong>Permission requests:</strong> Anyone who intends to incorporate this content (including text, images, and other components) into large language models, use it in AI offerings, use it commercially (including in print), and/or has questions about another use case is welcome to complete our
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/r/content-reuse-request\\">
      reuse request form</a>.
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a noncommercial print format, 
    then you must include on every physical page the following attribution:
    <p>
      Access for free at https://openstax.org/books/programming-python/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </p>
  </li>
  <li>
    If you are redistributing all or part of this book in a noncommercial digital format, 
    then for every page that includes OpenStax content, you must license the derivative work 
    under the same CC-BY-NC-SA license as the original, and include on every digital page 
    view the following attribution:
    <p>
      Access for free at <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/programming-python/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/programming-python/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </p>
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Citation information</strong>
<ul>
  <li>
    The information below includes the information needed to generate citations in most 
    major styles (APA, MLA, etc.); you must reformat and organize the information as needed 
    to fit the requirements of the style. Use the information below to generate a citation. 
    We recommend using a citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/programming-python/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/programming-python/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/programming-python/pages/test-page-1\\">https://openstax.org/books/programming-python/pages/test-page-1</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 The Michelson 20MM Foundation. <strong>The OpenStax name, OpenStax logo, OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo, 
    and Rice University name, and Rice University logo trademarks, or wordmarks are not subject to the Creative 
    Commons license and may not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
    style={
      Object {
        "--content-text-width": "82.5rem",
      }
    }
  />
  <strong>
    <div
      className="attribution-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "This book utilizes the OpenStax Python Code Runner. The code runner is developed by Wiley and is All Rights Reserved.",
        }
      }
      style={
        Object {
          "--content-text-width": "82.5rem",
        }
      }
    />
  </strong>
</details>
`;

exports[`Attribution in browser renders default attribution 1`] = `
<details
  className="attribution-details"
  data-analytics-region="attribution"
  data-testid="attribution-details"
  style={
    Object {
      "--attribution-text-color": "#424242",
      "--content-text-width": "82.5rem",
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
>
  <summary
    aria-label="Citation/Attribution"
    className="attribution-summary"
    style={
      Object {
        "--attribution-text-color": "#424242",
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="details-expand-icon attribution-summary-icon attribution-expand-icon"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.403 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="details-collapse-icon attribution-summary-icon attribution-collapse-icon"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span
      aria-level={2}
      role="heading"
    >
      Citation/Attribution
    </span>
  </summary>
  <div
    className="attribution-content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<strong role=\\"heading\\" aria-level=\\"3\\">Reuse and redistribution of this content in digital or print format:</strong>
<ul>
  <li>
    This book may not be used in the training of large language models or otherwise be ingested into large language models or generative AI offerings without OpenStax's prior written permission.
  </li>
  <li>
    This book uses the
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"http://example.com\\">
      Sweet License 1.0
    </a>, which means that you can reuse and modify the material only for noncommercial purposes, must attribute OpenStax, and must distribute any derivative works under the same license.
  </li>
  <li>
    Any commercial printing of this textbook, including using a local or custom printer, must be approved by OpenStax, and proper citation provided.
  </li>
  <li>
    OpenStax-copyrighted images, activities, assessments, and similar components of this book are subject to the same licensing – CC-BY-NC-SA. They can be used for noncommercial purposes with attribution. Commercial use requires permission.
  </li>
  <li>
    <strong>Permission requests:</strong> Anyone who intends to incorporate this content (including text, images, and other components) into large language models, use it in AI offerings, use it commercially (including in print), and/or has questions about another use case is welcome to complete our
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/r/content-reuse-request\\">
      reuse request form</a>.
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a noncommercial print format, 
    then you must include on every physical page the following attribution:
    <p>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </p>
  </li>
  <li>
    If you are redistributing all or part of this book in a noncommercial digital format, 
    then for every page that includes OpenStax content, you must license the derivative work 
    under the same CC-BY-NC-SA license as the original, and include on every digital page 
    view the following attribution:
    <p>
      Access for free at <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </p>
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Citation information</strong>
<ul>
  <li>
    The information below includes the information needed to generate citations in most 
    major styles (APA, MLA, etc.); you must reformat and organize the information as needed 
    to fit the requirements of the style. Use the information below to generate a citation. 
    We recommend using a citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/test-page-1\\">https://openstax.org/books/book-slug-1/pages/test-page-1</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 OpenStax. Textbook content produced by OpenStax is licensed under a Sweet License 1.0. <strong>The OpenStax name, OpenStax logo, OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo, 
    and Rice University name, and Rice University logo trademarks, or wordmarks are not subject to the Creative 
    Commons license and may not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
    style={
      Object {
        "--content-text-width": "82.5rem",
      }
    }
  />
</details>
`;

exports[`Attribution in browser renders special licensing and attribution for HS Physics 1`] = `
<details
  className="attribution-details"
  data-analytics-region="attribution"
  data-testid="attribution-details"
  style={
    Object {
      "--attribution-text-color": "#424242",
      "--content-text-width": "82.5rem",
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
>
  <summary
    aria-label="Citation/Attribution"
    className="attribution-summary"
    style={
      Object {
        "--attribution-text-color": "#424242",
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="details-expand-icon attribution-summary-icon attribution-expand-icon"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.403 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="details-collapse-icon attribution-summary-icon attribution-collapse-icon"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span
      aria-level={2}
      role="heading"
    >
      Citation/Attribution
    </span>
  </summary>
  <div
    className="attribution-content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<strong role=\\"heading\\" aria-level=\\"3\\">Reuse and redistribution of this content in digital or print format:</strong>
<ul>
  <li>
    This book may not be used in the training of large language models or otherwise be ingested into large language models or generative AI offerings without OpenStax's prior written permission.
  </li>
  <li>
    This book uses the
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"http://example.com\\">
      Sweet License 1.0
    </a>, which means that you can reuse and modify the material only for noncommercial purposes, must attribute Texas Education Agency (TEA), and must distribute any derivative works under the same license. The original material is available at: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.texasgateway.org/book/tea-physics\\">
        https://www.texasgateway.org/book/tea-physics
      </a>. Changes were made to the original material, including updates to art, structure, and other content updates.
  </li>
  <li>
    Any commercial printing of this textbook, including using a local or custom printer, must be approved by OpenStax, and proper citation provided.
  </li>
  <li>
    OpenStax-copyrighted images, activities, assessments, and similar components of this book are subject to the same licensing – CC-BY-NC-SA. They can be used for noncommercial purposes with attribution. Commercial use requires permission.
  </li>
  <li>
    <strong>Permission requests:</strong> Anyone who intends to incorporate this content (including text, images, and other components) into large language models, use it in AI offerings, use it commercially (including in print), and/or has questions about another use case is welcome to complete our
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/r/content-reuse-request\\">
      reuse request form</a>.
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a noncommercial print format, 
    then you must include on every physical page the following attribution:
    <p>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </p>
  </li>
  <li>
    If you are redistributing all or part of this book in a noncommercial digital format, 
    then for every page that includes OpenStax content, you must license the derivative work 
    under the same CC-BY-NC-SA license as the original, and include on every digital page 
    view the following attribution:
    <p>
      Access for free at <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </p>
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Citation information</strong>
<ul>
  <li>
    The information below includes the information needed to generate citations in most 
    major styles (APA, MLA, etc.); you must reformat and organize the information as needed 
    to fit the requirements of the style. Use the information below to generate a citation. 
    We recommend using a citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/test-page-1\\">https://openstax.org/books/book-slug-1/pages/test-page-1</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 Texas Education Agency (TEA). <strong>The OpenStax name, OpenStax logo, OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo, 
    and Rice University name, and Rice University logo trademarks, or wordmarks are not subject to the Creative 
    Commons license and may not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
    style={
      Object {
        "--content-text-width": "82.5rem",
      }
    }
  />
</details>
`;

exports[`Attribution in browser renders special licensing and attribution for Intellectual Property 1`] = `
<details
  className="attribution-details"
  data-analytics-region="attribution"
  data-testid="attribution-details"
  style={
    Object {
      "--attribution-text-color": "#424242",
      "--content-text-width": "82.5rem",
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
>
  <summary
    aria-label="Citation/Attribution"
    className="attribution-summary"
    style={
      Object {
        "--attribution-text-color": "#424242",
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="details-expand-icon attribution-summary-icon attribution-expand-icon"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.403 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="details-collapse-icon attribution-summary-icon attribution-collapse-icon"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span
      aria-level={2}
      role="heading"
    >
      Citation/Attribution
    </span>
  </summary>
  <div
    className="attribution-content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<strong role=\\"heading\\" aria-level=\\"3\\">Reuse and redistribution of this content in digital or print format:</strong>
<ul>
  <li>
    This book may not be used in the training of large language models or otherwise be ingested into large language models or generative AI offerings without OpenStax's prior written permission.
  </li>
  <li>
    This book uses the
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"http://example.com\\">
      Sweet License 1.0
    </a>, which means that you can reuse and modify the material only for noncommercial purposes, must attribute The Michelson 20MM Foundation, and must distribute any derivative works under the same license. Changes were made to the original material, including updates to art, structure, and other content updates.
  </li>
  <li>
    Any commercial printing of this textbook, including using a local or custom printer, must be approved by OpenStax, and proper citation provided.
  </li>
  <li>
    OpenStax-copyrighted images, activities, assessments, and similar components of this book are subject to the same licensing – CC-BY-NC-SA. They can be used for noncommercial purposes with attribution. Commercial use requires permission.
  </li>
  <li>
    <strong>Permission requests:</strong> Anyone who intends to incorporate this content (including text, images, and other components) into large language models, use it in AI offerings, use it commercially (including in print), and/or has questions about another use case is welcome to complete our
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/r/content-reuse-request\\">
      reuse request form</a>.
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a noncommercial print format, 
    then you must include on every physical page the following attribution:
    <p>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </p>
  </li>
  <li>
    If you are redistributing all or part of this book in a noncommercial digital format, 
    then for every page that includes OpenStax content, you must license the derivative work 
    under the same CC-BY-NC-SA license as the original, and include on every digital page 
    view the following attribution:
    <p>
      Access for free at <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </p>
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Citation information</strong>
<ul>
  <li>
    The information below includes the information needed to generate citations in most 
    major styles (APA, MLA, etc.); you must reformat and organize the information as needed 
    to fit the requirements of the style. Use the information below to generate a citation. 
    We recommend using a citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/test-page-1\\">https://openstax.org/books/book-slug-1/pages/test-page-1</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 The Michelson 20MM Foundation. <strong>The OpenStax name, OpenStax logo, OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo, 
    and Rice University name, and Rice University logo trademarks, or wordmarks are not subject to the Creative 
    Commons license and may not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
    style={
      Object {
        "--content-text-width": "82.5rem",
      }
    }
  />
</details>
`;

exports[`Attribution in browser renders special licensing and attribution for Statistics 1`] = `
<details
  className="attribution-details"
  data-analytics-region="attribution"
  data-testid="attribution-details"
  style={
    Object {
      "--attribution-text-color": "#424242",
      "--content-text-width": "82.5rem",
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
>
  <summary
    aria-label="Citation/Attribution"
    className="attribution-summary"
    style={
      Object {
        "--attribution-text-color": "#424242",
        "--link-color": "#027EB5",
        "--link-hover": "#0064A0",
      }
    }
  >
    <svg
      aria-hidden="true"
      className="details-expand-icon attribution-summary-icon attribution-expand-icon"
      viewBox="0 0 192 512"
    >
      <path
        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.403 0 402.48 0 384.662z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      className="details-collapse-icon attribution-summary-icon attribution-collapse-icon"
      viewBox="0 0 320 512"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
      />
    </svg>
    <span
      aria-level={2}
      role="heading"
    >
      Citation/Attribution
    </span>
  </summary>
  <div
    className="attribution-content"
    dangerouslySetInnerHTML={
      Object {
        "__html": "
<strong role=\\"heading\\" aria-level=\\"3\\">Reuse and redistribution of this content in digital or print format:</strong>
<ul>
  <li>
    This book may not be used in the training of large language models or otherwise be ingested into large language models or generative AI offerings without OpenStax's prior written permission.
  </li>
  <li>
    This book uses the
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"http://example.com\\">
      Sweet License 1.0
    </a>, which means that you can reuse and modify the material only for noncommercial purposes, must attribute Texas Education Agency (TEA), and must distribute any derivative works under the same license. The original material is available at: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.texasgateway.org/book/tea-statistics\\">
        https://www.texasgateway.org/book/tea-statistics
      </a>. Changes were made to the original material, including updates to art, structure, and other content updates.
  </li>
  <li>
    Any commercial printing of this textbook, including using a local or custom printer, must be approved by OpenStax, and proper citation provided.
  </li>
  <li>
    OpenStax-copyrighted images, activities, assessments, and similar components of this book are subject to the same licensing – CC-BY-NC-SA. They can be used for noncommercial purposes with attribution. Commercial use requires permission.
  </li>
  <li>
    <strong>Permission requests:</strong> Anyone who intends to incorporate this content (including text, images, and other components) into large language models, use it in AI offerings, use it commercially (including in print), and/or has questions about another use case is welcome to complete our
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/r/content-reuse-request\\">
      reuse request form</a>.
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a noncommercial print format, 
    then you must include on every physical page the following attribution:
    <p>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </p>
  </li>
  <li>
    If you are redistributing all or part of this book in a noncommercial digital format, 
    then for every page that includes OpenStax content, you must license the derivative work 
    under the same CC-BY-NC-SA license as the original, and include on every digital page 
    view the following attribution:
    <p>
      Access for free at <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </p>
  </li>
</ul>

<strong role=\\"heading\\" aria-level=\\"3\\">Citation information</strong>
<ul>
  <li>
    The information below includes the information needed to generate citations in most 
    major styles (APA, MLA, etc.); you must reformat and organize the information as needed 
    to fit the requirements of the style. Use the information below to generate a citation. 
    We recommend using a citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://openstax.org/books/book-slug-1/pages/test-page-1\\">https://openstax.org/books/book-slug-1/pages/test-page-1</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 Texas Education Agency (TEA). <strong>The OpenStax name, OpenStax logo, OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo, 
    and Rice University name, and Rice University logo trademarks, or wordmarks are not subject to the Creative 
    Commons license and may not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
      }
    }
    style={
      Object {
        "--content-text-width": "82.5rem",
      }
    }
  />
</details>
`;
